

Cambios presentados el 2021/02/04
---------------------------------
Se introduce un sistema básico de "subpantallas" para reducir la complejidad que
GameScreen estaba alcanzando al pasar de tener que mostrar únicamente el mundo a
tener que gestionar también la vista de las estadísticas y las distintas fases del
juego (introducción, partida y final). De este modo, ahora GameScreen se encarga
únicamente de delegar en la fase de juego apropiada para cada momento, y estas
fases disponen de acceso a dichas subpantallas, que son independientes entre sí.

En el futuro se añadirán más subpantallas para mostrar una cuenta atrás antes de
empezar la partida y el menú del final de la partida una vez el jugador pierda.
Ambas subpantallas se mostrarán por encima de la pantalla del mundo, lo que es
una característica soportada por este nuevo sistema.


Cambios presentados el 2021/02/05
---------------------------------
Se implementa una subpantalla para mostrar la cuenta atrás antes de empezar la
partida.

Se agrupan todas las imágenes en un solo TextureAtlas, logrando un rendimiento más
óptimo del juego.


Cambios presentados el 2021/02/06
---------------------------------
Se cambian algunos sprites del juego, incluyendo los tamaños de sus actores.

También se relaja el modo en el que el juego responde a algunos fallos del jugador:
Si se pierde toda la salud o choca contra un ventilador, tan solo se decrementa en
uno el contador de mascarillas, en vez de hacer que el jugador pierda de inmediato.
Considero que así es más justo, ya que estos peligros estaban demasiado
desproporcionados con respecto al que suponía chocar con un virus.


Cambios presentados el 2021/02/07
---------------------------------
Se añade la posibilidad de añadir transiciones a las pantallas del juego, mediante
una simple clase de subpantalla, y se incorpora una al principio de la fase de la
cuenta atrás.

También se añaden los contadores de tiempo a la interfaz que se muestra encima de
la partida.