@@ -1,0 +1,7 @@
+package com.colegiovivas.lapandemia.level;
+
+public class LevelFanActor {
+    public String sprite;
+    public float frameDuration;
+    public int[] pos;
+}
