@@ -1,0 +1,6 @@
+package com.colegiovivas.lapandemia.level;
+
+public class LevelPlayerState {
+    public int[] pos;
+    public int[] dir;
+}
