@@ -1,0 +1,7 @@
+package com.colegiovivas.lapandemia.level;
+
+public class LevelWallActor {
+    public String sprite;
+    public int[] pos;
+    public int[] size;
+}
