@@ -1,11 +1,0 @@
-package com.colegiovivas.lapandemia.levels;
-
-public class Fan {
-    public int x;
-    public int y;
-
-    public Fan(int x, int y) {
-        this.x = x;
-        this.y = y;
-    }
-}
